--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <div id="tagList">
                     <div id="ingredientTagList"></div>
-                    <div id="appareilTagList"></div>
+                    <div id="equipmentTagList"></div>
                     <div id="ustensilTagList"></div>
                 </div>
 
@@ -42,10 +42,10 @@
                     <i class="fas fa-chevron-up"></i>
                     <div id="ingredientList" class="list"></div>
                 </div>
-                <div id="appareilField" class="listField" tabindex="0">
-                    <span class="appareilFieldSpan">Appareils</span>
+                <div id="equipmentField" class="listField" tabindex="0">
+                    <span class="equipmentFieldSpan">Appareils</span>
                     <i class="fas fa-chevron-up"></i>
-                    <div id="appareilList" class="list"></div>
+                    <div id="equipmentList" class="list"></div>
                 </div>
                 <div id="ustensilField" class="listField" tabindex="0">
                     <span class="ustensilFieldSpan">Ustensiles</span>
